# ChangeLog for media-video/mplayer
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/mplayer/ChangeLog,v 1.52 2003/03/13 18:30:14 doctomoe Exp $

  13 mar 2003; Olivier Reisch <doctomoe@gentoo.org> mplayer-0.90_rc4.ebuild :
  Marked ppc stable

*mplayer-0.90_rc4 (16 Feb 2003)

  06 March 2003; Martin Schlemmer <azarah@gentoo.org> mplayer-0.90_rc4.ebuild :

  - Fix esound not disabled if 'esd' not in USE, bug #16758.
  - Remove --enable-shared-pp from ./configure, as it breaks mplayer with
    gcc-2.95.3,bug #14479.
  - Mark stable for x86.

  16 Feb 2003; Martin Schlemmer <azarah@gentoo.org> mplayer-0.90_rc4.ebuild :

  Update version.
  Add LIVE.COM support, thanks to J Robert Ray <jrray@gentoo.org>, bug #14766.

  02 Feb 2003; Martin Schlemmer <azarah@gentoo.org> mplayer-0.90_*.ebuild :

  Fix SRC_URI for fonts, closing bug #14770.

  21 Jan 2003; Martin Schlemmer <azarah@gentoo.org> mplayer-0.90_rc3.ebuild :

  Add --with-x11incdir=/usr/X11R6/include as a temporary fix for bug #14311.

*mplayer-0.90_rc3 (20 Jan 2003)

  20 Jan 2003; Martin Schlemmer <azarah@gentoo.org> mplayer-0.90_rc3.ebuild :

  New version.

  19 Jan 2003; Martin Schlemmer <azarah@gentoo.org> mplayer-0.90_rc2.ebuild :

  Only enable devfs support if /dev/.devfsd exists, bug #13613.

  07 Dec 2002; Martin Schlemmer <azarah@gentoo.org> mplayer-0.90_rc2.ebuild :

  Add lirc support, thanks to Jarkko Haapalainen <johaapa@student.oulu.fi>,
  bug #12244.  Mark stable for x86, and fix to depend on xfree-4.2.1-r2, fixing
  problems with gtk2 support and freetype.

*mplayer-0.90_rc2 (26 Dec 2002)

  26 Dec 2002; Martin Schlemmer <azarah@gentoo.org> mplayer-0.90_rc2.ebuild :

  New version.

*mplayer-0.90_rc1-r1 (13 Dec 2002)

  13 Dec 2002; Martin Schlemmer <azarah@gentoo.org> mplayer-0.90_rc1-r1.ebuild :

  Fix the xvid bork.  Add gtk2 support :D

*mplayer-0.90_rc1 (8 Dec 2002)
