@@ -1,0 +1,4 @@
+MD5 056c2cd23286ca5464a70defd4649134 MPlayer-0.90rc5.tar.bz2 3403602
+MD5 ab23f8e01a860a97852b28a3b0b118da mp-arial-iso-8859-1.zip 272659
+MD5 a5e01dd5fe14d2418a6ee349ff7a1c4b mp-arial-iso-8859-2.zip 255907
+MD5 5e12e283eeeec6125523a6f4a60d07cf default-skin-0.1.tar.bz2 167697
